--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,5 +9,9 @@ commands:
   coords:
     description: Send coordinates in the chat
     aliases: [ c, coo ]
+  afk:
+    description: Put the afk tag to itself
+    usage: "Usage : /afk <on|off>"
+
 
 
